name:                track
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/isaacazuelos/track
license:             MIT
license-file:        LICENSE
author:              Isaac Azuelos
maintainer:          isaac@azuelos.ca
copyright:           2017 Isaac Azuelos
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable track
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , directory
                     , filepath
                     , friendly-time
                     , optparse-generic
                     , text
                     , time
                     , yaml
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/isaacazuelos/track
